--- a/i3/config
+++ b/i3/config
@@ -24,7 +24,7 @@ font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec urxvt
 bindsym $mod+b exec firefox
 bindsym $mod+t exec thunar
 bindsym $mod+m exec thunderbird
