--- a/i3/config
+++ b/i3/config
@@ -149,6 +149,10 @@ mode "resize" {
         # back to normal: Enter or Escape
         bindsym Return mode "default"
         bindsym Escape mode "default"
+
+        bindsym $mod+Shift+minus move scratchpad
+        bindsym $mod+minus scratchpad show
+        bindsym $mod+s [title="^Sup ::"] scratchpad show
 }
 
 bindsym $mod+r mode "resize"
