--- a/i3/config
+++ b/i3/config
@@ -30,6 +30,7 @@ bindsym $mod+Return exec urxvt
 bindsym $mod+b exec firefox
 bindsym $mod+t exec thunar
 bindsym $mod+m exec thunderbird
+bindsym $mod+z exec ~/scripts/snd_switch.sh
 
 # kill focused window
 bindsym $mod+Shift+q kill
