--- a/i3/config
+++ b/i3/config
@@ -31,6 +31,7 @@ bindsym $mod+b exec firefox
 bindsym $mod+t exec thunar
 bindsym $mod+m exec thunderbird
 bindsym $mod+z exec ~/scripts/snd_switch.sh
+bindsym $mod+s exec /usr/bin/quickswitch.py -w
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -43,10 +44,10 @@ bindsym $mod+d exec dmenu_run
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -67,7 +68,7 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+h split h
+bindsym $mod+g split h
 
 # split in vertical orientation
 bindsym $mod+v split v
@@ -76,7 +77,7 @@ bindsym $mod+v split v
 bindsym $mod+f fullscreen
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
+#bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
@@ -93,33 +94,35 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # switch to workspace
-bindsym $mod+1 workspace 1: urxvt
-bindsym $mod+2 workspace 2: devel
-bindsym $mod+3 workspace 3: www
-bindsym $mod+4 workspace 4: file
-bindsym $mod+5 workspace 5: vm
-bindsym $mod+6 workspace 6: extra
-bindsym $mod+7 workspace 7: www
-bindsym $mod+8 workspace 8: devel
-bindsym $mod+9 workspace 9: mail
-bindsym $mod+0 workspace 10: office
-bindsym $mod+o workspace 11: media
-bindsym $mod+p workspace 12: extra
+bindsym $mod+1 workspace urxvt
+bindsym $mod+2 workspace dev
+bindsym $mod+4 workspace www
+bindsym $mod+5 workspace file
+bindsym $mod+6 workspace vm
+
+bindsym $mod+7 workspace www:2
+bindsym $mod+8 workspace dev:2
+bindsym $mod+9 workspace mail
+bindsym $mod+0 workspace office
+bindsym $mod+o workspace media
+bindsym $mod+p workspace extra
+
+bindsym $mod+3 workspace ssh
 
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1: urxvt
-bindsym $mod+Shift+2 move container to workspace 2: devel
-bindsym $mod+Shift+3 move container to workspace 3: www
-bindsym $mod+Shift+4 move container to workspace 4: file
-bindsym $mod+Shift+5 move container to workspace 5: vm
-bindsym $mod+Shift+6 move container to workspace 6: extra
-bindsym $mod+Shift+7 move container to workspace 7: www
-bindsym $mod+Shift+8 move container to workspace 8: devel
-bindsym $mod+Shift+9 move container to workspace 9: mail
-bindsym $mod+Shift+0 move container to workspace 10: office
-bindsym $mod+Shift+o move container to workspace 11: media
-bindsym $mod+Shift+p move container to workspace 12: extra
+bindsym $mod+Shift+1 move container to workspace urxvt
+bindsym $mod+Shift+2 move container to workspace dev
+bindsym $mod+Shift+3 move container to workspace ssh
+bindsym $mod+Shift+4 move container to workspace www
+bindsym $mod+Shift+5 move container to workspace file
+bindsym $mod+Shift+6 move container to workspace vm
+bindsym $mod+Shift+7 move container to workspace www:2
+bindsym $mod+Shift+8 move container to workspace dev:2
+bindsym $mod+Shift+9 move container to workspace mail
+bindsym $mod+Shift+0 move container to workspace office
+bindsym $mod+Shift+o move container to workspace media
+bindsym $mod+Shift+p move container to workspace extra
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -162,45 +165,37 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
         #status_command i3status
-        output DVI-1
+        output DFP7
         status_command $HOME/.i3/scripts/conky
 }
 
 bar {
-        output DVI-0
+        output DFP6
         status_command $HOME/.i3/scripts/conky2
 }
-workspace "1: urxvt" output DVI-0
-workspace "2: devel" output DVI-0
-workspace "3: www" output DVI-0
-workspace "4: file" output DVI-0
-workspace "5: vm" output DVI-0
-workspace "6: extra" output DVI-0
+workspace "urxvt" output DFP6
+workspace "dev" output DFP6
+workspace "ssh" output DFP6
+workspace "www" output DFP6
+workspace "file" output DFP6
+workspace "vm" output DFP6
 
-workspace "7: www" output DVI-1
-workspace "8: devel" output DVI-1
-workspace "9: mail" output DVI-1
-workspace "10: office" output DVI-1
-workspace "11: media" output DVI-1
-workspace "12: extra" output DVI-1
+workspace "www:2" output DFP7
+workspace "dev:2" output DFP7
+workspace "mail" output DFP7
+workspace "office" output DFP7
+workspace "media" output DFP7
+workspace "extra" output DFP7
 
-assign [class="Thunderbird"] "9: mail"
-assign [class="VirtualBox"] "5: vm"
-assign [class="Thunar"] "4: file"
-assign [class="Vlc"] "11: media"
-assign [class="Pavucontrol"] "6: extra"
-assign [class="Gedit"] "10: office"
-assign [class="Chromium"] "7: www"
-assign [class="Mplayer"] "11: media"
+assign [class="Thunderbird"] "mail"
+assign [class="VirtualBox"] "vm"
+assign [class="Thunar"] "file"
+assign [class="Vlc"] "media"
+assign [class="Pavucontrol"] "extra"
+assign [class="Gedit"] "office"
+assign [class="Mplayer"] "media"
 assign [class='XCalc'] floating enable
 assign [class='xcalc'] floating enable
+assign [class='Keepassx'] floating enable
 
-exec --no-startup-id "xrdb $HOME/.Xresources"
-exec sleep 3
-exec thunderbird
-exec $HOME/.i3/scripts/dzen
-
-#exec --no-startup-id "$HOME/.i3/scripts/1_autostart && $HOME/.i3/scripts/7_autostart"
 exec --no-startup-id "$HOME/.i3/scripts/1_autostart"
-
-
