switch to vimrc.bak, gpu_load added to status bar

--- a/i3/config
+++ b/i3/config
@@ -198,4 +198,5 @@ assign [class='XCalc'] floating enable
 assign [class='xcalc'] floating enable
 assign [class='Keepassx'] floating enable
 
+exec pulseaudio --start
 exec --no-startup-id "$HOME/.i3/scripts/1_autostart"
