--- a/i3/config
+++ b/i3/config
@@ -28,10 +28,17 @@ bindcode 122 exec $HOME/.i3/scripts/change_volume headset decrease
 # start a terminal
 bindsym $mod+Return exec urxvt
 bindsym $mod+b exec firefox
+bindsym $mod+n exec chromium 
 bindsym $mod+t exec thunar
 bindsym $mod+m exec thunderbird
 bindsym $mod+z exec ~/scripts/snd_switch.sh
 bindsym $mod+s exec /usr/bin/quickswitch.py -w
+
+bindsym Print exec ~/scripts/screengrab.py
+
+bindcode $mod+60 exec /usr/bin/mpc next
+bindcode $mod+59 exec /usr/bin/mpc prev 
+bindsym $mod+p exec /usr/bin/mpc pause
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -105,7 +112,6 @@ bindsym $mod+8 workspace dev:2
 bindsym $mod+9 workspace mail
 bindsym $mod+0 workspace office
 bindsym $mod+o workspace media
-bindsym $mod+p workspace extra
 
 bindsym $mod+3 workspace ssh
 
@@ -122,7 +128,8 @@ bindsym $mod+Shift+8 move container to workspace dev:2
 bindsym $mod+Shift+9 move container to workspace mail
 bindsym $mod+Shift+0 move container to workspace office
 bindsym $mod+Shift+o move container to workspace media
-bindsym $mod+Shift+p move container to workspace extra
+
+bindsym $mod+Shift+u move container to workspace TV
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -164,28 +171,35 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+        output DVI-0
+        status_command $HOME/.i3/scripts/conky2
+}
+bar {
         #status_command i3status
-        output DFP7
+        output DVI-1
         status_command $HOME/.i3/scripts/conky
 }
 
 bar {
-        output DFP6
-        status_command $HOME/.i3/scripts/conky2
+        status_command i3status
+        output HDMI-3 
+        #status_command $HOME/.i3/scripts/conky
 }
-workspace "urxvt" output DFP6
-workspace "dev" output DFP6
-workspace "ssh" output DFP6
-workspace "www" output DFP6
-workspace "file" output DFP6
-workspace "vm" output DFP6
 
-workspace "www:2" output DFP7
-workspace "dev:2" output DFP7
-workspace "mail" output DFP7
-workspace "office" output DFP7
-workspace "media" output DFP7
-workspace "extra" output DFP7
+workspace "media" output HDMI-3 
+
+workspace "urxvt" output DVI-0
+workspace "dev" output DVI-0
+workspace "ssh" output DVI-0
+workspace "www" output DVI-0
+workspace "file" output DVI-0
+workspace "vm" output DVI-0
+
+workspace "www:2" output DVI-1
+workspace "dev:2" output DVI-1
+workspace "mail" output DVI-1
+workspace "office" output DVI-1
+workspace "extra" output DVI-1
 
 assign [class="Thunderbird"] "mail"
 assign [class="VirtualBox"] "vm"
@@ -198,5 +212,5 @@ assign [class='XCalc'] floating enable
 assign [class='xcalc'] floating enable
 assign [class='Keepassx'] floating enable
 
-exec pulseaudio --start
 exec --no-startup-id "$HOME/.i3/scripts/1_autostart"
+exec --no-startup-id cvlc --http-port=9090
